k8s_yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: weightapp
spec:
    ports:
    - port: 8080
    selector:
        app: weightapp
